--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ jobs:
     docker:
       - image: node:8-alpine
     steps:
-      - run: apk add --no-cache make bash ca-certificates
+      - run: apk add --no-cache bash ca-certificates build-base libgit2-dev python
       - checkout
       - restore_cache:
           keys:
@@ -25,7 +25,7 @@ jobs:
     docker:
       - image: node:9-alpine
     steps:
-      - run: apk add --no-cache make bash ca-certificates
+      - run: apk add --no-cache bash ca-certificates build-base libgit2-dev python
       - checkout
       - restore_cache:
           keys:
