--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
           keys:
           - node8-dependencies-{{ checksum "yarn.lock" }}
           - node8-dependencies-
-      - run: yarn install --frozen-lockfile
+      - run: BUILD_ONLY=true JOBS=max yarn install --frozen-lockfile
       - save_cache:
           paths:
             - node_modules
@@ -31,7 +31,7 @@ jobs:
           keys:
           - node9-dependencies-{{ checksum "yarn.lock" }}
           - node9-dependencies-
-      - run: yarn install --frozen-lockfile
+      - run: BUILD_ONLY=true JOBS=max yarn install --frozen-lockfile
       - save_cache:
           paths:
             - node_modules
