--- a/config/default.toml
+++ b/config/default.toml
@@ -30,6 +30,12 @@ github_secret = 'leeroy'
 # channel = 'build-info' # can be omitted to use webhook default channel
 # url = 'https://hooks.slack.com/services/XXXXXXXXX/YYYYYYYYY/ZZZZZZZZZZZZZZ'
 
+# ssh key, optional will try to use ssh-agent if unset
+# [ssh]
+# pubkey = '/path/to/pubkey'
+# privkey = '/path/to/privkey'
+# password = 'key_password' # optional
+
 # work directory where repositores are checked out, must exist
 # will use os.tmpdir() if unset
 # work_dir = '/tmp'
